--- a/page-stats.yaml
+++ b/page-stats.yaml
@@ -37,3 +37,11 @@ limit_pagedetails_recent_views: 15
 style_top_browsers: chart
 style_top_platforms: chart
 style_top_countries: chart
+
+
+
+ignored_urls:
+  -
+    url: foo
+  -
+    url: bar
