--- a/languages.yaml
+++ b/languages.yaml
@@ -78,3 +78,7 @@ en:
     PAGE_DETAILS:
       RECENT_VIEWS: Recent Views on Page Details
 
+    PAGE_URL:
+        TEXT: Show page as
+        HELP: Should a page be shown as an URL or the page Titlt
+
