fix: clicking on view all recent pages does not show a list of page views grouped by day

--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,5 @@
     "require-dev": {
         "marcocesarato/php-conventional-changelog": "^1.15"
     },
-    "version": "2.1.0"
+    "version": "2.5.1
 }
