--- a/blueprints.yaml
+++ b/blueprints.yaml
@@ -77,6 +77,18 @@ form:
             label: PLUGIN_PAGE_STATS.STATS_DB_LABEL
             help: PLUGIN_PAGE_STATS.STATS_DB_HELP
 
+        anonymize_ips:
+            type: toggle
+            label: PLUGIN_PAGE_STATS.ANONYMIZE_IPS_LABEL
+            help: PLUGIN_PAGE_STATS.ANONYMIZE_IPS_HELP
+            highlight: 1
+            default: 0
+            options:
+                1: PLUGIN_ADMIN.ENABLED
+                0: PLUGIN_ADMIN.DISABLED
+            validate:
+                type: bool
+
 
         section_widgets:
             type: section
