--- a/languages.yaml
+++ b/languages.yaml
@@ -20,6 +20,9 @@ en:
             HELP: The style used to present data (table or chart)
 
 
+    DATETIME_OFFSET_LABEL: Date Time Offset From UTC
+    DATETIME_OFFSET_HELP: Display date/time values adjusted from UTC by specified offset
+
     LOG_TIME_ON_PAGE_LABEL: Log time on page
     LOG_TIME_ON_PAGE_HELP: If enabled Front End will trigger a ping event at regular intervals to mark the user as still on the page
     # STATS_DB_CREATE_LABEL: Recreate Stats database
